# esa-climate-toolbox

./: .gitignore  0.35  CHANGES.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  environment.yml  pyproject.toml  readthedocs.yml  rtd-environment.yml  setup.py
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: publish_pypi.yml
dags/: dag_config.yaml  generate_dags.py
docs/source/: about.rst  api_reference.rst  conf.py  index.rst  installation_guide.rst  introduction.rst  quick_start.rst  viewer.rst
docs/source/notebooks/: 1-ECT_Finding_Data.ipynb  1-ECT_General_Data_Access.ipynb  10-ECT_Using_xcube_viewer.ipynb  11-ECT_Reproject_Dataset.ipynb  13-ECT_Gap_Filling.ipynb  14-ECT_Access_ESGF.ipynb  2-ECT_General_Data_Access.ipynb  3 - Zarr_Access.ipynb  3-ECT_Data_Access_with_Subsets.ipynb  3.1-Zarr_Access.ipynb  3.2-Kerchunk_Access.ipynb  4-ECT_Access_Vector_Data.ipynb  5-ECT_Zarr_Access.ipynb  5-Using Operations.ipynb  6-ECT_Kerchunk_Access.ipynb  7-ECT_Finding_Operations.ipynb  8-ECT_Using_Operations.ipynb
docs/source/notebooks/Accessing_Data/: 1-ECT_Finding_Data.ipynb  2-ECT_General_Data_Access.ipynb  3-ECT_Data_Access_with_Subsets.ipynb  4-ECT_Access_Vector_Data.ipynb  7-ECT_Access_Vector_Data_Cubes.ipynb  9-ECT_Reading_WMS_data.ipynb
docs/source/notebooks/Advanced_Functionality/: 2-ECT_Failure-reporting.ipynb
docs/source/notebooks/Using_Operations/: 1-ECT_Finding_Operations.ipynb  2-ECT_Using_Operations.ipynb  3-ECT_Reprojecting_Data.ipynb  5-ECT_Gap_Filling.ipynb
esa_climate_toolbox/: __init__.py  constants.py  plugin.py  version.py
esa_climate_toolbox/cli/: __init__.py  main.py
esa_climate_toolbox/conf/: __init__.py  conf.py  defaults.py  template.py
esa_climate_toolbox/core/: __init__.py  common.py  ds.py  op.py  opchain.py  opimpl.py  plugin.py  types.py
esa_climate_toolbox/ds/: __init__.py  ccicdc.py  chunkstore.py  constants.py  dataaccess.py  dataframeaccess.py  geodataframe.py  kcaccess.py  normalize.py  timerangegetter.py  vdcaccess.py
esa_climate_toolbox/ds/data/: dataset_states.json  stores.yml  zarr_to_dsrids
esa_climate_toolbox/functions/: __init__.py  outputarray.py  regions.py
esa_climate_toolbox/functions/country_data/: README.md  countries.geojson
esa_climate_toolbox/ops/: __init__.py  aggregate.py  alignment.py  animate.py  anomaly.py  arithmetics.py  coregistration.py  correlation.py  data_frame.py  gapfilling.py  normalize.py  outliers.py  plot.py  plot_helpers.py  resampling.py  select.py  subset.py  timeseries.py  utility.py
esa_climate_toolbox/util/: __init__.py  cli.py  colormaps.py  cschemes.py  misc.py  monitor.py  opmetainf.py  process.py  reporting.py  safe.py  sround.py  time.py  tmpfile.py  undefined.py
esa_climate_toolbox/util/data/: categorical_colormaps.yml  categorical_colorschemes.yml
esa_climate_toolbox/util/im/: __init__.py  cmap_lc.py  cmaps.py  cschemes.py
notebooks/: 1 - ECT_General_Data_Access.ipynb  1-ECT_Finding_Data.ipynb  10-ECT_Using_xcube_viewer.ipynb  11-ECT_Reproject_Dataset.ipynb  12-ECT_Filter_Operations.ipynb  13-ECT_Gap_Filling.ipynb  13-ECT_Reading_WCS_data.ipynb  14-ECT_Access_ESGF.ipynb  14-ECT_Reading_WMS_data.ipynb  16-Performance.ipynb  2 - ECT_Data_Access_with_Subsets.ipynb  2-ECT_Data_Access_with_Subsets.ipynb  2-ECT_General_Data_Access.ipynb  3 - Zarr_Access.ipynb  3-ECT_Data_Access_with_Subsets.ipynb  3.2 - Kerchunk_Access.ipynb  4 - Finding Operations.ipynb  4-ECT_Access_Vector_Data.ipynb  4-Finding Operations.ipynb  5 - Using Operations.ipynb  5-ECT_Zarr_Access.ipynb  6-ECT_Kerchunk_Access.ipynb  8-ECT_Using_Operations.ipynb  9-ECT_Access_Vector_Data_Cubes.ipynb  CCI-SeaIce-Annimation.ipynb  README.md
notebooks/Accessing_Data/: 1-ECT_Finding_Data.ipynb  10-ECT_Reading_WMS_data.ipynb  11-ECT_Access_Data_Trees.ipynb  11-ECT_Access_ESGF.ipynb  4-ECT_Access_Vector_Data.ipynb  5-ECT_Zarr_Access.ipynb  7-ECT_Access_Vector_Data_Cubes.ipynb  8-ECT_Reading_WCS_data.ipynb
notebooks/Advanced_Functionality/: 1-ECT_Using_xcube_viewer.ipynb  2-ECT-Failure-reporting.ipynb
notebooks/Using_Operations/: 1-ECT_Finding_Operations.ipynb  3-ECT_Reprojecting_Data.ipynb
notebooks/external_user_examples/: README.md
notebooks/user_examples/: Fire_Access.ipynb  HRLC_Access.ipynb  README.md
test/: test_cciodp.py  test_chunkstore.py  test_dataaccess.py  test_dataframeaccess.py  test_kcaccess.py  test_plugin.py
test/core/: test_ds.py  test_op.py  test_opchain.py  test_plugin.py  test_types.py
test/core/executables/: filterds.py  mkentropy.py
test/ds/: test_ccicdc.py  test_chunkstore.py  test_dataaccess.py  test_dataframeaccess.py  test_geodataframe.py  test_kcaccess.py  test_normalize.py  test_zarraccess.py
test/functions/: test_outputarray.py  test_regions.py
test/ops/: test_aggregate.py  test_alignment.py  test_animate.py  test_anomaly.py  test_arithmetics.py  test_coregistration.py  test_correlation.py  test_data_frame.py  test_downsample_2d.py  test_gapfilling.py  test_normalize.py  test_outliers.py  test_plot.py  test_plot_helpers.py  test_resample_2d.py  test_select.py  test_subset.py  test_timeseries.py  test_upsample_2d.py  test_utility.py
test/util/: test_cli.py  test_cmaps.py  test_colormaps.py  test_cschemes.py  test_misc.py  test_monitor.py  test_process.py  test_safe.py  test_sround.py  test_time.py  test_tmpfile.py  test_undefined.py
xcube_cci/: cciodp.py  chunkstore.py  constants.py  dataaccess.py  dataframeaccess.py  kcaccess.py  timerangegetter.py  vdcaccess.py  zarraccess.py
xcube_cci/data/: dataset_states.json  zarr_to_dsrids
(+1 files in other folders)
