[build-system]
requires = ["setuptools", "setuptools-scm", "aiohttp", "lxml", "nest-asyncio", "pydap==3.3"]
build-backend = "setuptools.build_meta"

[project]
name = "esa_climate_toolbox"
version = "0.2.2.dev0"
authors = [
  { name="ESA CCI Toolbox Development Team" },
]
description = "The ESA CCI Toolbox is designed to provide access to CCI data from the ESA Open Data Portal."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.entry-points."xcube_plugins"]
    esa-climate-toolbox = "esa_climate_toolbox.plugin:init_plugin"
[project.entry-points."esa_climate_toolbox_plugins"]
    esa-climate-esa_climate_toolbox_ops = "esa_climate_toolbox.ops:ect_init"

[project.urls]
"Homepage" = "https://github.com/esa-cci/esa-climate-toolbox"
"Bug Tracker" = "https://github.com/esa-cci/esa-climate-toolbox/issues"
