[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "esa_climate_toolbox"
version = "1.5"
authors = [
  { name="ESA CCI Toolbox Development Team" },
]
description = """\
    The ESA CCI Toolbox is designed to provide access to CCI data
    from the ESA Open Data Portal.
    """
keywords = [
  "data science", "cci", "climate data"
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cartopy",
    "cftime",
    "dask",
    "geopandas",
    "lxml>=4.5",
    "matplotlib",
    "nest-asyncio>=1.3",
    "numcodecs",
    "numba>0.35",
    "numpy>=2",
    "pandas",
    "pyproj",
    "python-dateutil",
    "shapely",
    "simplekml",
    "six",
    "xarray",
    "xcube-core>=1.4.0",
    "xcube-cci>=0.11.1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov"
]

[project.entry-points."esa_climate_toolbox_plugins"]
esa-climate-esa_climate_toolbox_ops = "esa_climate_toolbox.ops:ect_init"
esa-climate-esa_climate_toolbox_ds = "esa_climate_toolbox.ds:ect_init"
[project.entry-points."xcube_plugins"]
esa-climate-toolbox = "esa_climate_toolbox.plugin:init_plugin"

[project.urls]
"Homepage" = "https://github.com/esa-cci/esa-climate-toolbox"
"Bug Tracker" = "https://github.com/esa-cci/esa-climate-toolbox/issues"
"Changelog" = "https://github.com/esa-cci/esa-climate-toolbox/CHANGES.md"
"Documentation" = "https://esa-climate-toolbox.readthedocs.io"
"Download" = "https://pypi.org/project/esa-climate-toolbox/#files"
"Release notes" = "https://github.com/esa-cci/esa-climate-toolbox/releases"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
  "test*",
  "docs*",
  "notebooks*"
]
